--- a/MachineLearning_Ds/MachineLearning_Ds.csproj
+++ b/MachineLearning_Ds/MachineLearning_Ds.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="Microsoft.ML" Version="2.0.0" />
+    <PackageReference Include="Microsoft.ML.FastTree" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
